test updated XRD interactions

--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -52,7 +52,8 @@
     "If you want to **save a copy** of this notebook for yourself, go to \"File > Save a copy in Drive\" and you will find it in your Google Drive account under \"My Drive > Colab Notebooks.\"\n",
     "If you want to run the notebook locally, you can download it and make sure all the Python modules in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed before running it.\n",
     "\n",
-    "To run this notebook, run all the cells (e.g. `Runtime > Run all` in the menu) and then adjust the sliders at the bottom. Click `Generate Plot` each time you change a setting. I **strongly recommend** just running the code and experimenting with the inputs *before* reading the code in great detail."
+    "To run this notebook, run all the cells (e.g. `Runtime > Run all` in the menu) and then adjust the sliders at the bottom.\n",
+    "I **strongly recommend** just running the code and experimenting with the inputs *before* reading the code in great detail."
    ]
   },
   {
@@ -95,22 +96,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----------------------------------\n",
-    "\n",
-    "## Python module imports\n",
-    "\n",
-    "These are all the required Python modules."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Python module imports\n",
     "# General modules\n",
     "import itertools\n",
     "\n",
@@ -121,29 +112,83 @@
     "%matplotlib inline\n",
     "\n",
     "# Interactivity modules\n",
-    "from ipywidgets import interact_manual, fixed, \\\n",
+    "from IPython.display import HTML, display\n",
+    "from ipywidgets import interact_manual, interactive_output, fixed, \\\n",
     "                       IntSlider, FloatSlider, FloatLogSlider, RadioButtons, \\\n",
-    "                       Button, Layout"
+    "                       Button, Checkbox, Layout, GridspecLayout"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "------------------------------------- \n",
+    "\n",
     "## Widget function\n",
     "\n",
-    "Our widget will call `plot_XRD()` each time we interact with it. This function calculates the structure factor and the intensities and then plots the spectra on an $\\text{Intensity vs. } 2\\theta$ plot. I've tried my best to keep the code simple and yet illustrative. Please see comments for more information."
+    "Our widget will call `plot_XRD()` each time we interact with it. \n",
+    "This function calculates the structure factor and the intensities and then plots the spectra on an $\\text{Intensity}$ vs. $2\\theta$ plot. \n",
+    "I've tried my best to keep the code simple and yet illustrative. \n",
+    "Please see the comments in the code for more information."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       " if (code_show){\n",
+       " $('div.input').hide();\n",
+       " } else {\n",
+       " $('div.input').show();\n",
+       " }\n",
+       " code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is a clever snippet that hides all of the code\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "code_folding": []
    },
    "outputs": [],
    "source": [
-    "def plot_XRD(a, wavelength, cell_type, thickness, T=0, K=0.94):\n",
+    "def plot_XRD(a, wavelength, cell_type, thickness, T=0, label=True, K=0.94):\n",
     "    \"\"\"This function is called by the widget to perform the plotting based on inputs.\n",
     "    \n",
     "    Args:\n",
@@ -224,8 +269,9 @@
     "        # Don't include the curves that aren't selected by the Structure factor\n",
     "        if max(normed_curve) > 1e1:\n",
     "            max_ind = normed_curve.argmax()\n",
-    "            ax.annotate(s=planes_str[i], \\\n",
-    "                        xy=(x[max_ind], normed_curve[max_ind] + thermal_diffuse[max_ind]))\n",
+    "            if label:\n",
+    "                ax.annotate(s=planes_str[i], \\\n",
+    "                            xy=(x[max_ind], normed_curve[max_ind] + thermal_diffuse[max_ind]))\n",
     "            all_curves.append(normed_curve)\n",
     "    final_curve = np.max(all_curves, axis=0) + thermal_diffuse\n",
     "    plt.plot(x, final_curve, c='C0', lw=4, alpha=0.7)\n",
@@ -242,59 +288,98 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we create each slider individually for readability and customization."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b1 = Button(description='A button', layout=Layout(width='400px', height='30px'))\n",
-    "b2 = Button(description='A button', layout=Layout(width='400px', height='60px'))\n",
-    "\n",
-    "a_widget = FloatSlider(value=0.352, min=0.31, max=0.4, step=0.001, \n",
-    "                       description='Lattice constant (nm)', readout_format='.3f', \n",
-    "                       style={'description_width':'150px'}, layout=b1.layout)\n",
-    "\n",
-    "w_widget = FloatSlider(value=0.154, min=0.13, max=0.16, step=0.001, \n",
-    "                       description='X-ray wavelength (nm)', readout_format='.3f', \n",
-    "                       style={'description_width':'150px'}, layout=b1.layout)\n",
-    "\n",
-    "c_widget = RadioButtons(options=['FCC', 'BCC', 'DC'], description='Crystal structure',\n",
-    "                        style={'description_width':'150px'}, layout=b2.layout)\n",
-    "\n",
-    "t_widget = FloatLogSlider(value=10, base=10, min=0, max=3, step=0.1, \n",
-    "                          description='Crystallite thickness (nm)',  readout_format='d', \n",
-    "                          style={'description_width':'150px'}, layout=b1.layout)\n",
-    "\n",
-    "T_widget = IntSlider(value=298, min=0, max=1000, step=1, \n",
-    "                     description='Temperature (K)', readout_format='d', \n",
-    "                     style={'description_width':'150px'}, layout=b1.layout)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After you have set your parameters, click **Generate Plot** to see the resulting XRD spectra."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": false
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
-    "interact_manual.opts['manual_name'] = 'Generate Plot'\n",
-    "interact_manual(plot_XRD, a=a_widget, wavelength=w_widget, cell_type=c_widget, \n",
-    "                          thickness=t_widget, T=T_widget, K=fixed(0.94));"
+    "# Now we create each slider individually for readability and customization.\n",
+    "a_widget = FloatSlider(value=0.352, min=0.31, max=0.4, step=0.001, \n",
+    "                       description='Lattice constant (nm)', readout_format='.3f', \n",
+    "                       style={'description_width':'150px'}, continuous_update=False,\n",
+    "                       layout=Layout(width='400px', height='30px'))\n",
+    "\n",
+    "w_widget = FloatSlider(value=0.154, min=0.13, max=0.16, step=0.001, \n",
+    "                       description='X-ray wavelength (nm)', readout_format='.3f', \n",
+    "                       style={'description_width':'150px'}, continuous_update=False,\n",
+    "                       layout=Layout(width='400px', height='30px'))\n",
+    "\n",
+    "t_widget = FloatLogSlider(value=10, base=10, min=0, max=3, step=0.1, \n",
+    "                          description='Crystallite thickness (nm)',  readout_format='d', \n",
+    "                          style={'description_width':'150px'}, continuous_update=False,\n",
+    "                          layout=Layout(width='400px', height='35px'))\n",
+    "\n",
+    "T_widget = IntSlider(value=298, min=0, max=1000, step=1, \n",
+    "                     description='Temperature (K)', readout_format='d', \n",
+    "                     style={'description_width':'150px'}, continuous_update=False,\n",
+    "                     layout=Layout(width='400px', height='35px'))\n",
+    "\n",
+    "c_widget = RadioButtons(options=['FCC', 'BCC', 'DC'], description='Crystal structure',\n",
+    "                        style={'description_width':'150px'}, continuous_update=False,\n",
+    "                        layout=Layout(width='350px', height='60px'))\n",
+    "\n",
+    "l_widget = Checkbox(value=False, description='Annotate peaks?')\n",
+    "\n",
+    "g = GridspecLayout(n_rows=4, n_columns=2, height='160px', width='820px')\n",
+    "g[0, 0] = a_widget\n",
+    "g[1, 0] = w_widget\n",
+    "g[2, 0] = t_widget\n",
+    "g[3, 0] = T_widget\n",
+    "g[0:2, 1] = c_widget\n",
+    "g[2, 1] = l_widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set your parameters below and see how the XRD spectra changes!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0dca15f83cc046eb88d9593c49765931",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridspecLayout(children=(FloatSlider(value=0.352, continuous_update=False, description='Lattice constant (nm)'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7435ce574894302a7e07cd606ccc249",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "out = interactive_output(plot_XRD, {'a':a_widget, 'wavelength':w_widget, 'cell_type':c_widget,\n",
+    "                                    'thickness':t_widget, 'T':T_widget, 'label':l_widget, 'K':fixed(0.94)})\n",
+    "display(g, out)"
    ]
   },
   {
