shift the HTML lower

--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -134,54 +134,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       " if (code_show){\n",
-       " $('div.input').hide();\n",
-       " } else {\n",
-       " $('div.input').show();\n",
-       " }\n",
-       " code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# This is a clever snippet that hides all of the code\n",
-    "HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    " if (code_show){\n",
-    " $('div.input').hide();\n",
-    " } else {\n",
-    " $('div.input').show();\n",
-    " }\n",
-    " code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "code_folding": []
@@ -291,9 +243,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -434,6 +384,54 @@
     "* It doesn't have great safeguards against numerical errors, such as invalid `arcsin` arguments and `NaN`. Please be gentle. ❤\n",
     "* There's a weird rendering error where for large intensities the upper limit (e.g. `1e6`) appears on the y-axis. **:shrug:**\n",
     "* I left out \"simple cubic\" as one of the candidate structures because it results in too many numerical instabilities to correct for. It's also a boring spectra."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       " if (code_show){\n",
+       " $('div.input').hide();\n",
+       " } else {\n",
+       " $('div.input').show();\n",
+       " }\n",
+       " code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is a clever snippet that hides all of the code - unfortunately doesn't work on Google Colaboratory\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
    ]
   }
  ],
