--- a/python/01_Introduction_to_Python.ipynb
+++ b/python/01_Introduction_to_Python.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Welcome to Python and Jupyter!\n",
+    "\n",
+    "*Authors: Enze Chen (University of California, Berkeley)*\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Test Jupyter notebook\n",
     "\n",
     "This is a Markdown cell that renders text according to [Markdown syntax](https://www.markdownguide.org/basic-syntax) ([here's a cheat sheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)).\n",
