update interactive state

--- a/mse/Interactive_GFE_PD.ipynb
+++ b/mse/Interactive_GFE_PD.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "id": "Vqd_zuFpnzR2"
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -680,7 +680,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a864d819aff04815a7d1d68237d7ebb0",
+       "model_id": "dd4246a9bf8d4ffea3ca9b3db3814ec7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -694,12 +694,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8123d14c5cb64c7ebaaa7e8770e99c86",
+       "model_id": "36a894f2ff384ee18f56571614464732",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<Figure size 324x396 with 2 Axes>', 'i…"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -738,7 +738,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -752,7 +752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -1442,5 +1442,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
